# modular

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  modular.ino  modular.py  path
config/: config.ini  config.json  panel.json  riban-template.vcv
config/snapshots/: last_state.rms
docs/: Panel Detect Process  module.md  modulemanager.md  rmcore.md  usart.md
firmware/: firmware.code-workspace  test.c  test.py
firmware/brain/: platformio.ini
firmware/brain/src/: main.cpp
firmware/can_controller/: platformio.ini
firmware/can_controller/include/: can.h
firmware/can_controller/src/: main.cpp
firmware/core/: CMakeLists.txt
firmware/core/include/: can.h
firmware/core/src/: can.cpp  main.cpp
firmware/generic_panel/: platformio.ini
firmware/generic_panel/include/: adc.h  can.h  global.h  switches.h  ws2812.h
firmware/generic_panel/src/: adc.c  can.c  main.c  switches.c  ws2812.c
firmware/generic_panel_f103/: platformio.ini
firmware/generic_panel_f103/include/: can.h  global.h  ws2812.hpp
firmware/generic_panel_f103/src/: main.cpp
firmware/host/: CMakeLists.txt  modular.py  scan.cpp
firmware/host/src/: main.cpp  usart.cpp  usart.h
firmware/include/: adcs.hpp  global.h  panel_types.h  switches.hpp  ws2812.hpp
firmware/rmcore/: CMakeLists.txt  version.h.in
firmware/rmcore/include/: amp.h  module.h  module.hpp  moduleManager.h  node.h  oscillator.h  rack.hpp  usart.h  util.h  version.h  wavetable.h
firmware/rmcore/plugins/include/: amp.h  bogamrm.h  bognoise.h  bogslew.h  bogvcf.h  bogvco.h  envelope.h  filter.h  ladder.h  midi.h  mixer.h  noise.h  oscillator.h  random.h  sequencer.h  template.h  vca.h  vcf.h  vco.h
firmware/rmcore/plugins/src/: amp.cpp  bogamrm.cpp  bognoise.cpp  bogslew.cpp  bogvcf.cpp  bogvco.cpp  eg.cpp  envelope.cpp  filter.cpp  ladder.cpp  midi.cpp  mixer.cpp  noise.cpp  oscillator.cpp  random.cpp  sequencer.cpp  slew.cpp  template.cpp  vca.cpp  vcf.cpp  vco.cpp
firmware/rmcore/src/: amp.cpp  buildWavetable.cpp  main.cpp  module.cpp  moduleManager.cpp  node.cpp  oscillator.cpp  oscillator.h  rmcore.cpp  usart.cpp  util.cpp
firmware/universal_panel/: platformio.ini
firmware/universal_panel/include/: universal.h
firmware/universal_panel/src/: detect.cpp
host/: CMakeLists.txt  clear_reset.py  modular.py  osc.py  panels.py  scan.cpp
host/src/: main.cpp
modules/: platformio.ini  test.py
modules/include/: adc.h  control.h  led.h  modular.h  module_types.h  switch.h  touch.h  ws2812.h
modules/src/: adc.cpp  control.cpp  led.cpp  main.cpp  switch.cpp  touch.cpp  ws2812.cpp
panels/: platformio.ini  test.py
panels/fronts/: bogaudio_lvcf  bogaudio_lvcf.dxf  brain  brain.dxf  lvcf
panels/fronts/bogaudio_vco/: front_10hp_bogaudio_vco.kicad_pcb  front_10hp_bogaudio_vco.kicad_prl  front_10hp_bogaudio_vco.kicad_pro  front_10hp_bogaudio_vco.pro
panels/fronts/bogaudio_vco/Decals.pretty/: Scale_10pt_0at4.kicad_mod  Scale_10pt_20mm_0-4.kicad_mod  Scale_11pt_0at10.kicad_mod  Scale_11pt_0at5.kicad_mod  Scale_11pt_13mm_0-10.kicad_mod  Scale_11pt_13mm_0-5.kicad_mod  Scale_11pt_20mm_0-10.kicad_mod
panels/include/: detect.h  panel.h  panel_types.h
panels/pcb/: SW_PUSH_6mm_H4.3mm.kicad_mod  ws2812b.kicad_sym
panels/pcb/10hp/: 10hp-cache.lib  10hp.sch  10hp.sch-bak
panels/pcb/10hp_generic/: 10hp_generic-cache.lib  10hp_generic.csv  10hp_generic.kicad_pcb  10hp_generic.kicad_prl  10hp_generic.kicad_pro  10hp_generic.kicad_sch  10hp_generic.sch  10hp_generic.xml  LED_XL-1615RGBC-WS2812B.kicad_mod  Potentiometer_9mm_Vertical.kicad_mod  SW_PUSH_6mm_H4.3mm.kicad_mod  WS2812.dcm  WS2812.lib  fp-info-cache  fp-lib-table
panels/pcb/front_10hp_bogaudio_vco/Decals.pretty/: Scale_10pt.kicad_mod  Scale_11pt.kicad_mod  Scale_11pt_0at0.kicad_mod  Scale_11pt_13mm.kicad_mod  Scale_11pt_13mm_0-0.kicad_mod  Scale_11pt_20mm_0-0.kicad_mod  Scale_11pt_20mm_0-5.kicad_mod
panels/src/: detect.cpp  panel.cpp  ws2812.cpp
public/: index.html
universal_panel/include/: detect.h  universal.h
universal_panel/src/: universal.cpp
web/: index.html~
